--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-relay": "^16.2.0"
+    "react-relay": "^16.2.0",
+    "relay-runtime": "^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
